Remove empty break lines / code formatting and review